Add instructions to operate the application.

--- a/image2object/templates/app.html
+++ b/image2object/templates/app.html
@@ -25,6 +25,15 @@
 		<script src="static/js/ObjCanvas.js"></script>
 		<script src="static/js/DrawCanvas.js"></script>
 
+		<h1>Image2Object</h1>
+		<br>
+		<h2>Web application to predict 3D object from 2D image.</h2>
+		<ol>
+			<li>Write contour of 2D image in left canvas.</li>
+			<li>Push "<span style="font:italic">Predict 3D Object</span>" button.</li>
+			<li>After a while, predicted 3D object is shown in right canvas. You can rotate the object by mouse dragging on canvas.</li>
+		</ol>
+
 		<table>
 			<tr>
 				<td>
