--- a/image2object/templates/app.html
+++ b/image2object/templates/app.html
@@ -52,6 +52,7 @@
 			<tr>
 				<td>
 					<button id="clearDrawingBtn">Clear</button>
+					<br>
 					<button onclick="convertTo3D()">Convert to 3D</button>
 					<button onclick="predict3D()">Predict 3D Object</button>
 				</td>
@@ -63,10 +64,12 @@
 					R : <input name="predictedLightR" id="predictedLightR" type="range" min="1" max="255"><br>
 					G : <input name="predictedLightG" id="predictedLightG" type="range" min="1" max="255"><br>
 					B : <input name="predictedLightB" id="predictedLightB" type="range" min="1" max="255"><br>
-					<br><br>
+					<br>
 					R : <input name="predictedAmbientR" id="predictedAmbientR" type="range" min="1" max="255"><br>
 					G : <input name="predictedAmbientG" id="predictedAmbientG" type="range" min="1" max="255"><br>
 					B : <input name="predictedAmbientB" id="predictedAmbientB" type="range" min="1" max="255"><br>
+					<br>
+					Camera : forward <input name="cameraPositionZ" id="cameraPositionZ" type="range" value="2000" min="1000" max="4000"> backward <br>
 				</td>
 			</tr>
 		</table>
@@ -82,7 +85,7 @@
 			clearDrawingBtn.onclick = function() {
 				drawCanvas.clear();
 			};
-			
+
 			function convertTo3D() {
 				var imageData = drawContext.getImageData(0, 0, 512, 512);
 				var depthData = drawContext.getImageData(0, 0, nWidth, nHeight);
@@ -262,6 +265,13 @@
 
 			var sliderAmbientB = document.getElementById("predictedAmbientB");
 			sliderAmbientB.addEventListener("input", updateAmbientColor, false);
+
+			// camera position
+			var updateCameraPosition = function() {
+				canvasScene.setCameraPositionZ(cameraPositionZ.value);
+			};
+			var cameraPositionZ = document.getElementById("cameraPositionZ");
+			cameraPositionZ.addEventListener("input", updateCameraPosition, false);
 
 		</script>
 
