--- a/image2object/templates/app.html
+++ b/image2object/templates/app.html
@@ -79,6 +79,7 @@
 					</div>
 					Camera : forward <input name="cameraPositionZ" id="cameraPositionZ" type="range" value="2000" min="1000" max="4000"> backward <br>
 					Exaggerate Depth : <input name="clipRatio" id="clipRatio" type="range" value="0.1" min="0.0" max="0.2" step="0.0025"> <br>
+					Smooth : <input type="checkbox" id="checkSmooth"> <br>
 				</td>
 			</tr>
 		</table>
@@ -268,6 +269,20 @@
 			};
 			var clipRatioSlider = document.getElementById("clipRatio");
 			clipRatioSlider.addEventListener("input", clipRatio, false);
+
+			var checkSmooth = document.getElementById("checkSmooth");
+			var smooth3D = function() {
+				if (checkSmooth.checked) {
+					canvasScene.loadUint8Array(meshData, true);
+					canvasScene.animate();
+				} else {
+					canvasScene.loadUint8Array(meshData, false);
+					canvasScene.animate();
+				}
+			};
+			checkSmooth.addEventListener("change", smooth3D);
+
+
 
 		</script>
 
